crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_dns__dns_record_add_json.snap
---
source: crates/hoppy-cli/tests/e2e/cli_dns.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 100099,
  "Type": 0,
  "Ttl": 300,
  "Value": "192.0.2.1",
  "Name": "test",
  "Weight": 0,
  "Priority": 0,
  "Port": 0,
  "Flags": 0,
  "Tag": null,
  "Accelerated": false,
  "AcceleratedPullZoneId": 0,
  "LinkName": null,
  "Disabled": false,
  "Comment": null,
  "PullZoneId": 0,
  "ScriptId": 0,
  "SmartRoutingType": null,
  "MonitorType": null,
  "MonitorStatus": null,
  "GeolocationLatitude": 0.0,
  "GeolocationLongitude": 0.0,
  "LatencyZone": null,
  "AutoSslIssuance": false
}
