crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_dns__dns_record_list_json.snap
---
source: tests/e2e/cli_dns.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "Id": 100001,
    "Type": 0,
    "Ttl": 300,
    "Value": "93.184.216.34",
    "Name": "",
    "Weight": 0,
    "Priority": 0,
    "Port": 0,
    "Flags": 0,
    "Tag": null,
    "Accelerated": false,
    "AcceleratedPullZoneId": 0,
    "LinkName": null,
    "Disabled": false,
    "Comment": null
  },
  {
    "Id": 100002,
    "Type": 2,
    "Ttl": 3600,
    "Value": "www.example.com",
    "Name": "www",
    "Weight": 0,
    "Priority": 0,
    "Port": 0,
    "Flags": 0,
    "Tag": null,
    "Accelerated": false,
    "AcceleratedPullZoneId": 0,
    "LinkName": null,
    "Disabled": false,
    "Comment": "WWW redirect"
  },
  {
    "Id": 100003,
    "Type": 4,
    "Ttl": 3600,
    "Value": "mail.example.com",
    "Name": "",
    "Weight": 0,
    "Priority": 10,
    "Port": 0,
    "Flags": 0,
    "Tag": null,
    "Accelerated": false,
    "AcceleratedPullZoneId": 0,
    "LinkName": null,
    "Disabled": false,
    "Comment": null
  }
]
