crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_dns__dns_zone_get_table.snap
---
source: tests/e2e/cli_dns.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+-------+-------------+---------+-------------+-----------+--------------+--------------+-------------------+---------+--------+----------------------+----------------------+
| ID    | Domain      | Records | NS Detected | Custom NS | Nameserver 1 | Nameserver 2 | SOA Email         | Logging | DNSSEC | Created              | Modified             |
+-------+-------------+---------+-------------+-----------+--------------+--------------+-------------------+---------+--------+----------------------+----------------------+
| 50001 | example.com | 3       | true        | false     | -            | -            | admin@example.com | false   | false  | 2024-01-01T00:00:00Z | 2024-01-15T10:30:00Z |
+-------+-------------+---------+-------------+-----------+--------------+--------------+-------------------+---------+--------+----------------------+----------------------+
